--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -38,7 +38,7 @@
     --bs-gray-800: #343a40;
     --bs-gray-900: #212529;
     --bs-primary: #1D809F;
-    --bs-secondary: #ecb807;
+    --bs-secondary: #1CAC64;
     --bs-success: #198754;
     --bs-info: #0dcaf0;
     --bs-warning: #ecb807;
@@ -46,7 +46,7 @@
     --bs-light: #f8f9fa;
     --bs-dark: #212529;
     --bs-primary-rgb: 29, 128, 159;
-    --bs-secondary-rgb: 236, 184, 7;
+    --bs-secondary-rgb: 28, 172, 100;
     --bs-success-rgb: 25, 135, 84;
     --bs-info-rgb: 13, 202, 240;
     --bs-warning-rgb: 236, 184, 7;
@@ -137,13 +137,14 @@ h1,
 
 h2,
 .h2 {
-    font-size: calc(1.325rem + 0.9vw);
+    font-size: calc(1.325rem + 2.5vw)/*calc(1.325rem + 0.9vw)*/
+    ;
 }
 
 @media (min-width: 1200px) {
     h2,
     .h2 {
-        font-size: 2rem;
+        font-size: calc(1.325rem + 2.5vw);
     }
 }
 
@@ -532,7 +533,8 @@ progress {
 }
 
 .lead {
-    font-size: 1.25rem;
+    margin-top: 1rem;
+    font-size: calc(1rem + 1.15vw);
     font-weight: 300;
 }
 
@@ -2998,7 +3000,7 @@ textarea.form-control.is-invalid {
 
 .btn {
     display: inline-block;
-    font-weight: 400;
+    font-weight: 800;
     line-height: 1.5;
     color: #212529;
     text-align: center;
@@ -3012,7 +3014,7 @@ textarea.form-control.is-invalid {
     background-color: transparent;
     border: 1px solid transparent;
     padding: 0.375rem 0.75rem;
-    font-size: 1rem;
+    font-size: 1.5rem;
     border-radius: 0.25rem;
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
@@ -3048,8 +3050,8 @@ fieldset:disabled .btn {
 
 .btn-primary:hover {
     color: #fff;
-    background-color: #196d87;
-    border-color: #17667f;
+    background-color: #1CAC64;
+    border-color: #1CAC64;
 }
 
 .btn-check:focus+.btn-primary,
@@ -3357,8 +3359,8 @@ fieldset:disabled .btn {
 
 .btn-dark {
     color: #fff;
-    background-color: #212529;
-    border-color: #212529;
+    background-color: #1CAC64;
+    border-color: #1CAC64;
 }
 
 .btn-dark:hover {
@@ -8362,6 +8364,16 @@ fieldset:disabled .btn {
     color: rgba(var(--bs-white-rgb), var(--bs-text-opacity)) !important;
 }
 
+.text-white-social {
+    --bs-text-opacity: 1;
+    color: rgba(var(--bs-white-rgb), var(--bs-text-opacity)) !important;
+}
+
+.text-white-social:hover {
+    --bs-text-opacity: 1;
+    color: rgba(var(--bs-black-rgb), var(--bs-text-opacity)) !important;
+}
+
 .text-body {
     --bs-text-opacity: 1;
     color: rgba(var(--bs-body-color-rgb), var(--bs-text-opacity)) !important;
@@ -11122,7 +11134,7 @@ html {
 
 .content-section-heading h3,
 .content-section-heading .h3 {
-    font-size: 1rem;
+    font-size: 1.5rem;
     text-transform: uppercase;
 }
 
@@ -11281,7 +11293,7 @@ footer.footer .social-link {
 }
 
 footer.footer .social-link:hover {
-    background-color: #155d74;
+    background-color: #1CAC64;
     text-decoration: none;
 }
 
@@ -11303,7 +11315,8 @@ footer.footer .social-link:hover {
 }
 
 .masthead {
-    min-height: 30rem;
+    min-height: 100vh;
+    /*30rem;*/
     position: relative;
     display: table;
     width: 100%;
